@@ -1,6 +1,9 @@
 - ADD: From the log dialog it's now possible to start
        the repository browser so it browses the
        selected revision. (Stefan)
+- ADD: New button in the settings dialog to open
+       the subversion config file with the default
+       text editor. (Stefan)
 - CHG: The log message editboxes now do "soft-wrap",
        i.e. the logmessage is wrapped at the right
        end of the dialog box. (Stefan)
